Configure build for each microservice

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@ include 'api-gateway'
 include 'authentication-service'
 include 'registration-service'
 include 'storage-service'
-
+include 'common'
