--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -9,10 +9,8 @@ repositories {
 }
 
 dependencies {
+    implementation files('libs/conductor-1.0-BETA.jar')
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
-test {
-    useJUnitPlatform()
 }
