--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,25 @@
 plugins {
-    id 'org.springframework.boot' version '2.7.4'
-    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
     id 'java'
+    id('io.freefair.lombok') version '8.3'
 }
 
 group = 'ua.edu.ukma'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
-repositories {
-    mavenCentral()
+allprojects {
+    repositories {
+        mavenCentral()
+    }
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-    // https://mvnrepository.com/artifact/com.google.guava/guava
-    implementation 'com.google.guava:guava:31.1-jre'
-
-    // https://mvnrepository.com/artifact/com.h2database/h2
-    implementation('com.h2database:h2:2.1.214.redhat-00001')
-
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
-
-tasks.named('compileJava') {
-    inputs.files(tasks.named('processResources'))
+configure(allprojects) {
+    test {
+        useJUnitPlatform()
+    }
 }
