--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
     id 'java'
 }
 
@@ -10,6 +12,11 @@ repositories {
 
 dependencies {
     implementation files('libs/conductor-1.0-BETA.jar')
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot
+    implementation("org.springframework.boot:spring-boot:${springBootVersion}")
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
+    implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
