--- a/authentication-service/build.gradle
+++ b/authentication-service/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
     id 'java'
 }
 
