--- a/api-gateway/build.gradle
+++ b/api-gateway/build.gradle
@@ -11,12 +11,26 @@ repositories {
 }
 
 dependencies {
+    implementation project(':common')
+    implementation project(':registration-service')
+    implementation project(':storage-service')
     implementation files('libs/conductor-1.0-BETA.jar')
 
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot
     implementation("org.springframework.boot:spring-boot:${springBootVersion}")
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
     implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
+    implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-webflux
+    implementation("org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}")
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation("com.google.code.gson:gson:2.10.1")
+
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly("org.projectlombok:lombok:1.18.28")
+    annotationProcessor("org.projectlombok:lombok:1.18.28")
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
