--- a/registration-service/build.gradle
+++ b/registration-service/build.gradle
@@ -19,6 +19,10 @@ dependencies {
     implementation("org.springframework.boot:spring-boot:${springBootVersion}")
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
     implementation("org.springframework.boot:spring-boot-starter:${springBootVersion}")
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
+    implementation("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
+    // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+    implementation("org.springframework.security:spring-security-core:6.1.3")
 
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     implementation("org.postgresql:postgresql:42.6.0")
